Trying another fix to overflow issue.

--- a/src/css/homepage.scss
+++ b/src/css/homepage.scss
@@ -1,10 +1,12 @@
 // src/css/homepage.scss
 .homepage .container {
   margin: auto; 
-  overflow: hidden;  
 }
 
 .homepage {
   overflow: hidden;  
 }
 
+.homepage.main-wrapper {
+  overflow: hidden; 
+}
